--- a/PostBlog/blog/templates/blog/base.html
+++ b/PostBlog/blog/templates/blog/base.html
@@ -29,8 +29,11 @@
             </div>
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
-                <h3 style="color: white;">Hey {{request.user}}</h3>
-                <a href="{% url 'blog-new' %}" id="auth-links">
+              <!-- <a class="nav-item nav-link" href="#">Login</a>
+              <a class="nav-item nav-link" href="#">Register</a> -->
+              <!-- <button class="noselect">Create Post</button> -->
+<!--                <h3 style="color: white;">Hello {{request.user}}</h3>-->
+                <a href="">
                 <span></span>
                 <span></span>
                 <span></span>
@@ -66,6 +69,13 @@
                 <span></span>
                 Register
             </a>
+            <!-- <a href="#">
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                Neon button
+            </a> -->
                 {% endif %}
             </div>
           </div>
@@ -88,7 +98,7 @@
         </div>
         <div class="col-md-4">
           <div class="content-sectionw">
-             <h3>Our Sidebar</h3>
+            <!-- <h3>Our Sidebar</h3>
             <p class='text-muted'>You can put any information here you'd like.
               <ul class="list-group">
                 <li class="list-group-item list-group-item-light">Latest Posts</li>
@@ -96,7 +106,7 @@
                 <li class="list-group-item list-group-item-light">Calendars</li>
                 <li class="list-group-item list-group-item-light">etc</li>
               </ul>
-            </p>
+            </p> -->
             <div class="d-flex flex-column align-items-stretch flex-shrink-0 bg-white" style="width: 380px;" style="padding-top: 120px;">
                 <a id="list-group" style="text-decoration: none;" href="" class="d-flex align-items-center flex-shrink-0 p-3 link-dark text-decoration-none border-bottom">
                   <!-- <svg class="bi me-2" width="30" height="24"><use xlink:href="#bootstrap"/></svg> -->
